WIP - fix margin/padding loss when wrapping

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -69,32 +69,24 @@
 }
 
 .project-left {
-  /* width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: left;
-  justify-content: flex-start; */
-  /* max-height: 35vh; */
-  margin: 10px;
+  /* margin: -10px; */
+  justify-content: center;
   position: relative;
 	display: flex;
 	flex-flow: row wrap;
 }
 
 .project-right {
-  /* width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: right;
-  justify-content: flex-end; */
-  /* max-height: 35vh; */
-  margin: 10px;
+  /* margin: -10px; */
+  justify-content: center;
   position: relative;
 	display: flex;
 	flex-flow: row-reverse wrap;
 }
 
 .project-image {
+  /* margin: 20px; */
+  padding: 5px;
   max-height: 35vh;
   flex: 1;
   height: auto;
@@ -102,6 +94,8 @@
 }
 
 .project-description {
+  /* margin: 20px; */
+  padding: 5px;
   flex: 1;
   height: auto;
 }
